Update to links

--- a/index.html
+++ b/index.html
@@ -2,6 +2,55 @@
 <html>
 <body>
 <h1>DEEP LINK TESTING</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
+<h2>PC instructions</h2>
+<p>Connect the headset to PC via quest link or steamlink</p>
+<p>Open links in a browser on PC and open the windows app deovr with headset connected</p>
+
+<h2>ANDROID instructions</h2>
+<p>To test on android, open this page in broweser (NOT IN APP) and try clicking on a link. The idea is that from outside source we start the app and open a deep link</p>
+
+<h3>DEO</h3>
+<a href= "deovr://deovr.com/miao9j">deovr://deovr.com/miao9j</a>
+<a href= "https://deovr.com/miao9j">https://deovr.com/miao9j</a>
+<a href= "deovr://https://deovr.com/1234">deovr://https://deovr.com/1234</a>
+<a href= "deovr://https://deovr.com/deovr/video/id/1493">deovr://https://deovr.com/deovr/video/id/1493</a>
+
+<h3>SLR</h3>
+
+<a href= "deovr://sexlikereal.com/video=6610&type=dreamcam">deovr://sexlikereal.com/video=6610&type=dreamcam</a>
+<a href= "deovr://https://www.sexlikereal.jp/video=14062">deovr://https://www.sexlikereal.jp/video=14062</a>
+<a href= "deovr://sexlikereal.com/video=12345">deovr://sexlikereal.com/video=12345</a>
+<a href= "deovr://sexlikereal.com/type=dreamcam&cambroadcastid=8597c7d8-18e2-11ea-9715-1e63a3fe8cc7">deovr://sexlikereal.com/type=dreamcam&cambroadcastid=8597c7d8-18e2-11ea-9715-1e63a3fe8cc7</a>
+<a href= "deovr://sexlikereal.com/type=favorites&sort=most_favorite&period=weekly">deovr://sexlikereal.com/type=favorites&sort=most_favorite&period=weekly</a>
+<a href= "deovr://sexlikereal.com/video=6610&type=dreamcam">deovr://sexlikereal.com/video=6610&type=dreamcam</a>
+<a href= "deovr://sexlikereal.com/cambroadcastid=8597c7d8-18e2-11ea-9715-1e63a3fe8cc7">deovr://sexlikereal.com/cambroadcastid=8597c7d8-18e2-11ea-9715-1e63a3fe8cc7</a>
+<p>Project 3 = Transgender</p>
+<a href= "deovr://sexlikereal.com/project=3">deovr://sexlikereal.com/project=3</a>
+<p>studio 224 = SLR Originals</p>
+<a href= "deovr://sexlikereal.com/studio=slr-originals&video=44087">deovr://sexlikereal.com/studio=slr-originals&video=44087</a>
+<a href= "deovr://sexlikereal.com/studio=224&video=44087">deovr://sexlikereal.com/studio=slr-originals&video=44087</a>
+<p>Tag 705 = Female POV</p>
+<a href= "deovr://sexlikereal.com/language=english&tag=705">deovr://sexlikereal.com/language=english&tag=705</a>
+<a href= "deovr://sexlikereal.com/tag=705">deovr://sexlikereal.com/tag=705</a>
+
+<h3>JSON</h3>
+
+<a href= "deovr://https://cdn-vr.sexlikereal.com/videos_app/h264/8336_1440p.mp4">deovr://https://cdn-vr.sexlikereal.com/videos_app/h264/8336_1440p.mp4</a>
+<a href= "deovr://https://stasyqvr.com/deovr_feed/json/id/139">deovr://https://stasyqvr.com/deovr_feed/json/id/139</a>
+<a href= "deovr://https://stasyqvr.com/deovr">deovr://https://stasyqvr.com/deovr</a>
+<a href= "deovr://https://google.com">deovr://https://google.com</a>
+<a href= "https://google.com">https://google.com</a>
+<a href= "https://cdn-vr.sexlikereal.com/videos_app/h264/8336_1440p.mp4">https://cdn-vr.sexlikereal.com/videos_app/h264/8336_1440p.mp4</a>
+
+
+<h3>LOCAL</h3>
+<p>For testing of local links to work create folders and files with same name as called here</p>
+
+<a href= "deo://C:\DeeplinksTest\_180_sbs_1.mp4">Direct path test - C:\DeeplinksTest\_180_sbs_1.mp4</a>
+<a href= "deo://C:\DeeplinksTest\_180_sbs_4.jpg">Direct path test - C:\DeeplinksTest\_180_sbs_4.jpg</a>
+<a href= "deo://file://C:\DeeplinksTest\_180_sbs_1.mp4">file:// path test - C:\DeeplinksTest\_180_sbs_1.mp4</a>
+<a href= "deo://file://C:\DeeplinksTest\_180_sbs_4.jpg">file:// path test - C:\DeeplinksTest\_180_sbs_4.jpg</a>
+
 </body>
 </html>
