--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 <a href= "deovr://deovr.com/miao9j">deovr://deovr.com/miao9j</a><br>
 <a href= "deovr://https://deovr.com/1234">deovr://https://deovr.com/1234</a><br>
 <a href= "deovr://https://deovr.com/deovr/video/id/1493">deovr://https://deovr.com/deovr/video/id/1493</a><br>
-<a href= "https://deovr.com/miao9j">https://deovr.com/miao9j</a><br>
 
 <h3>SLR</h3>
 
@@ -40,11 +39,10 @@
 <a href= "deovr://https://stasyqvr.com/deovr_feed/json/id/139">deovr://https://stasyqvr.com/deovr_feed/json/id/139</a><br>
 <a href= "deovr://https://stasyqvr.com/deovr">deovr://https://stasyqvr.com/deovr</a><br>
 <a href= "deovr://https://google.com">deovr://https://google.com</a><br>
-<a href= "https://google.com">https://google.com</a><br>
-<a href= "https://cdn-vr.sexlikereal.com/videos_app/h264/8336_1440p.mp4">https://cdn-vr.sexlikereal.com/videos_app/h264/8336_1440p.mp4</a><br>
 
 
 <h3>LOCAL</h3>
+<p>TODO try to open local files through deep links if possible</p>
 <p>For testing of local links to work create folders and files with same name as called here</p>
 
 <a href= "deo://C:\DeeplinksTest\_180_sbs_1.mp4">Direct path test - C:\DeeplinksTest\_180_sbs_1.mp4</a><br>
