--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <p>Open links in a browser on PC and open the windows app deovr with headset connected</p>
 
 <h2>ANDROID instructions</h2>
-<p>To test on android, open this page in broweser (NOT IN APP) and try clicking on a link. The idea is that from outside source we start the app and open a deep link</p>
+<p>To test on android, open this page in browser (NOT IN APP) and try clicking on a link. The idea is that from outside source we start the app and open a deep link</p>
+<p>You will have to try in a browser or app that allows opening different apps. For instance WOLVIC browser. Ordinary occulus browser will not open links</p>
 
 <h3>DEO</h3>
 <a href= "deovr://deovr.com/miao9j">deovr://deovr.com/miao9j</a><br>
@@ -42,8 +43,8 @@
 
 
 <h3>LOCAL</h3>
-<p>TODO try to open local files through deep links if possible</p>
-<p>For testing of local links to work create folders and files with same name as called here</p>
+<p>Below links will only work if opening through a server serving them or some other way. Browsers do not allow opening files like this</p>
+<p>This is an example of local links</p>
 
 <a href= "deo://C:\DeeplinksTest\_180_sbs_1.mp4">Direct path test - C:\DeeplinksTest\_180_sbs_1.mp4</a><br>
 <a href= "deo://C:\DeeplinksTest\_180_sbs_4.jpg">Direct path test - C:\DeeplinksTest\_180_sbs_4.jpg</a><br>
